fix: fixing letter-spacing on hero title

--- a/css/style.css
+++ b/css/style.css
@@ -535,6 +535,7 @@ template {
   font-family: HKGrotesk-Bold;
   font-size: 56px;
   line-height: 68px;
+  letter-spacing: 0.2px;
   margin: 0 0 5px 0;
 }
 
