--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -58,6 +58,7 @@
     font-family: HKGrotesk-Bold
     font-size: 56px
     line-height: 68px
+    letter-spacing: 0.2px
     margin: 0 0 5px 0
   &__description
     font-style: normal
